Added net observer
Signed-off-by: Stevan Buzejic <buzejic.stevan@gmail.com>