@@ -25,42 +25,46 @@ public class NetworkMetricsCalculatorTests {
         long startNum = 1000;
         long endNum = 2000;
 
-        Map<String, Long> curipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
-                endNum,
-                Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
-                endNum
-        );
-        Map<String, Long> oldipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
-                startNum,
-                Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
-                startNum
-        );
-        Map<String, Long> curipv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
-                endNum,
-                Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
-                endNum
-        );
-        Map<String, Long> oldpv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
-                startNum,
-                Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
-                startNum
-        );
-        Map<String, Long> curphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), endNum);
-        Map<String, Long> oldphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), startNum);
-        NetInterfaceSummary result = NetworkMetricsCalculator.calculateInNetworkMetrics(
-                endTimeInMillis,
-                startTimeInMillis,
-                curipv4,
-                oldipv4,
-                curipv6,
-                oldpv6,
-                curphy,
-                oldphy
-        );
+        Map<String, Long> curipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
+                        endNum,
+                        Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
+                        endNum);
+        Map<String, Long> oldipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
+                        startNum,
+                        Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
+                        startNum);
+        Map<String, Long> curipv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
+                        endNum,
+                        Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
+                        endNum);
+        Map<String, Long> oldpv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
+                        startNum,
+                        Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
+                        startNum);
+        Map<String, Long> curphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), endNum);
+        Map<String, Long> oldphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), startNum);
+        NetInterfaceSummary result =
+                NetworkMetricsCalculator.calculateInNetworkMetrics(
+                        endTimeInMillis,
+                        startTimeInMillis,
+                        curipv4,
+                        oldipv4,
+                        curipv6,
+                        oldpv6,
+                        curphy,
+                        oldphy);
 
         assertNotNull(result);
         assertEquals(result.getDirection(), NetInterfaceSummary.Direction.in);
@@ -78,40 +82,44 @@ public class NetworkMetricsCalculatorTests {
         long startNum = 1000;
         long endNum = 2000;
 
-        Map<String, Long> curipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), endNum,
-                Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), endNum,
-                Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), endNum
-        );
-        Map<String, Long> oldipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), startNum,
-                Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), startNum,
-                Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), startNum
-        );
+        Map<String, Long> curipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), endNum,
+                        Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), endNum,
+                        Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), endNum);
+        Map<String, Long> oldipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), startNum,
+                        Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), startNum,
+                        Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), startNum);
 
-        Map<String, Long> curipv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), endNum,
-                Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), endNum,
-                Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), endNum
-        );
-        Map<String, Long> oldpv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), startNum,
-                Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), startNum,
-                Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), startNum
-        );
+        Map<String, Long> curipv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), endNum,
+                        Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), endNum,
+                        Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), endNum);
+        Map<String, Long> oldpv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), startNum,
+                        Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), startNum,
+                        Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), startNum);
 
-        Map<String, Long> curphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), endNum);
-        Map<String, Long> oldphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), startNum);
-        NetInterfaceSummary result = NetworkMetricsCalculator.calculateOutNetworkMetrics(
-                endTimeInMillis,
-                startTimeInMillis,
-                curipv4,
-                oldipv4,
-                curipv6,
-                oldpv6,
-                curphy,
-                oldphy
-        );
+        Map<String, Long> curphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), endNum);
+        Map<String, Long> oldphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), startNum);
+        NetInterfaceSummary result =
+                NetworkMetricsCalculator.calculateOutNetworkMetrics(
+                        endTimeInMillis,
+                        startTimeInMillis,
+                        curipv4,
+                        oldipv4,
+                        curipv6,
+                        oldpv6,
+                        curphy,
+                        oldphy);
 
         assertNotNull(result);
         assertEquals(result.getDirection(), NetInterfaceSummary.Direction.out);
@@ -130,42 +138,46 @@ public class NetworkMetricsCalculatorTests {
         long startNum = 1000;
         long endNum = 2000;
 
-        Map<String, Long> curipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
-                endNum,
-                Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
-                endNum
-        );
-        Map<String, Long> oldipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
-                startNum,
-                Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
-                startNum
-        );
-        Map<String, Long> curipv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
-                endNum,
-                Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
-                endNum
-        );
-        Map<String, Long> oldpv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
-                startNum,
-                Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
-                startNum
-        );
-        Map<String, Long> curphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), endNum);
-        Map<String, Long> oldphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), startNum);
-        NetInterfaceSummary result = NetworkMetricsCalculator.calculateInNetworkMetrics(
-                endTimeInMillis,
-                startTimeInMillis,
-                curipv4,
-                oldipv4,
-                curipv6,
-                oldpv6,
-                curphy,
-                oldphy
-        );
+        Map<String, Long> curipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
+                        endNum,
+                        Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
+                        endNum);
+        Map<String, Long> oldipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.IN_RECEIVES.getLabel(),
+                        startNum,
+                        Ipv4Observer.Ipv4Keys.IN_DELIVERS.getLabel(),
+                        startNum);
+        Map<String, Long> curipv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
+                        endNum,
+                        Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
+                        endNum);
+        Map<String, Long> oldpv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.IN_RECEIVES.getLabel(),
+                        startNum,
+                        Ipv6Observer.Ipv6Keys.IN_DELIVERS.getLabel(),
+                        startNum);
+        Map<String, Long> curphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), endNum);
+        Map<String, Long> oldphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.IN_BYTES.getLabel(), startNum);
+        NetInterfaceSummary result =
+                NetworkMetricsCalculator.calculateInNetworkMetrics(
+                        endTimeInMillis,
+                        startTimeInMillis,
+                        curipv4,
+                        oldipv4,
+                        curipv6,
+                        oldpv6,
+                        curphy,
+                        oldphy);
 
         assertNull(result);
     }
@@ -177,35 +189,40 @@ public class NetworkMetricsCalculatorTests {
         long startNum = 1000;
         long endNum = 2000;
 
-        Map<String, Long> curipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), endNum,
-                Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), endNum,
-                Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), endNum
-        );
-        Map<String, Long> oldipv4 = Map.of(
-                Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), startNum,
-                Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), startNum,
-                Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), startNum
-        );
+        Map<String, Long> curipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), endNum,
+                        Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), endNum,
+                        Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), endNum);
+        Map<String, Long> oldipv4 =
+                Map.of(
+                        Ipv4Observer.Ipv4Keys.OUT_REQUESTS.getLabel(), startNum,
+                        Ipv4Observer.Ipv4Keys.OUT_DISCARDS.getLabel(), startNum,
+                        Ipv4Observer.Ipv4Keys.OUT_NO_ROUTES.getLabel(), startNum);
 
-        Map<String, Long> curipv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), endNum,
-                Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), endNum,
-                Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), endNum
-        );
-        Map<String, Long> oldpv6 = Map.of(
-                Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), startNum,
-                Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), startNum,
-                Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), startNum
-        );
+        Map<String, Long> curipv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), endNum,
+                        Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), endNum,
+                        Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), endNum);
+        Map<String, Long> oldpv6 =
+                Map.of(
+                        Ipv6Observer.Ipv6Keys.OUT_REQUESTS.getLabel(), startNum,
+                        Ipv6Observer.Ipv6Keys.OUT_DISCARDS.getLabel(), startNum,
+                        Ipv6Observer.Ipv6Keys.OUT_NO_ROUTES.getLabel(), startNum);
 
-        Map<String, Long> curphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), endNum);
-        Map<String, Long> oldphy = Collections.singletonMap(DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), startNum);
-        NetInterfaceSummary result = NetworkMetricsCalculator.calculateOutNetworkMetrics(
-                endTimeInMillis,
-                startTimeInMillis,
-                curipv4,
-                oldipv4,
+        Map<String, Long> curphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), endNum);
+        Map<String, Long> oldphy =
+                Collections.singletonMap(
+                        DeviceNetworkStatsObserver.NetworkStatKeys.OUT_BYTES.getLabel(), startNum);
+        NetInterfaceSummary result =
+                NetworkMetricsCalculator.calculateOutNetworkMetrics(
+                        endTimeInMillis,
+                        startTimeInMillis,
+                        curipv4,
+                        oldipv4,
                         curipv6,
                         oldpv6,
                         curphy,
